--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gsap": "^3.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icon": "^1.0.0",
     "react-icons": "^4.8.0",
     "react-parallax": "^3.5.1",
     "swiper": "^9.2.0"
